<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2017 Ace Explorer owned by Siju Sakaria
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_5"
        android:shrinkColumns="2">

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/package_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPackage"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/installed_source"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSource"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />

        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/installed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textInstalled"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />

        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/updated"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textUpdated"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:id="@+id/textMinSdkPlaceHolder"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/min_sdk"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textMinSdk"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/target_sdk"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTargetSdk"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/version_code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textVersionCode"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="end"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/enabled"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textEnabled"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_5" />
        </TableRow>

    </TableLayout>

</ScrollView>
